--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ setupGame();
 	<body>
 		<a-scene sync-system="app: AltStone; author: Winrar" altspace="fullspace: true">
       <a-assets>
-        <img id="player-area" src="playerarea.jpeg">
+        <img id="player-area" src="playerarea.jpg">
       </a-assets>
       <a-plane class="card" material="transparent: true" position="-3 0.2" rotation="270 180" scale="1.2 1.7 1.7"></a-plane>
       <a-plane class="card" material="transparent: true" position="-4.2 0.2" rotation="270 180" scale="1.2 1.7 1.7"></a-plane>
