--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	var db = firebase.firestore();
 	var fbRef = db.collection("AltStone");
  </script>
+ <script type="text/javascript" src="game.js"></script>
  <script type="text/javascript" src="join-game-button.js"></script>
  <script>
     var turnCounter = 0
