--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="card.js"></script>
   <script type="text/javascript" src="setup.js"></script>
   <script type="text/javascript" src="cardlist.js"></script>
+  <script type="text/javascript" src="deck.js"></script>
   <script>
   	// Initialize Firebase
   	firebase.initializeApp({
@@ -18,7 +19,6 @@
 	var fbRef = db.collection("AltStone");
  </script>
  <script type="text/javascript" src="game.js"></script>
- <script type="text/javascript" src="game-start.js"></script>
  <script type="text/javascript" src="join-game-button.js"></script>
 	</head>
 	<body>
@@ -27,36 +27,44 @@
         <img id="player-area" src="playerarea.jpg">
         <img id="board" src="wood-board.jpg">
         <img id="mana" src="mana.png">
+        <img id="end-turn" src="end-turn.png">
+        <img id="card-back" src="card-back.png">
       </a-assets>
-      <a-plane class="card-p1" material="transparent: true; opacity: 0" position="-2.2 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0" position="-2.2 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
-      <a-plane class="card-p1" material="transparent: true; opacity: 0" position="-3.6 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0" position="-3.6 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
-      <a-plane class="card-p1" material="transparent: true; opacity: 0" position="-5 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0" position="-5 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
-      <a-plane class="card-p1" material="transparent: true; opacity: 0" position="-6.4 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0" position="-6.4 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
-      <a-plane class="card-p1" material="transparent: true; opacity: 0" position="-7.8 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0" position="-7.8 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p1" material="transparent: true" position="-2.2 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p1" material="transparent: true; color: green" position="-2.2 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p1" material="transparent: true" position="-3.6 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p1" material="transparent: true; color: green" position="-3.6 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p1" material="transparent: true" position="-5 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p1" material="transparent: true; color: green" position="-5 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p1" material="transparent: true" position="-6.4 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p1" material="transparent: true; color: green" position="-6.4 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p1" material="transparent: true" position="-7.8 0.1 -0.8" rotation="270 180" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p1" material="transparent: true; color: green" position="-7.8 0.1 1.5" rotation="270 180" scale="1.1 1.6 1.6"></a-plane>
       <!-- P2 CARDS -->
-      <a-plane class="card-p2" material="transparent: true; opacity: 0" position="-2.2 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p2" material="transparent: true; color: green; opacity: 0" position="-2.2 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
-      <a-plane class="card-p2" material="transparent: true; opacity: 0" position="-3.6 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p2" material="transparent: true; color: green; opacity: 0" position="-3.6 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
-      <a-plane class="card-p2" material="transparent: true; opacity: 0" position="-5 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p2" material="transparent: true; color: green; opacity: 0" position="-5 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
-      <a-plane class="card-p2" material="transparent: true; opacity: 0" position="-6.4 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p2" material="transparent: true; color: green; opacity: 0" position="-6.4 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
-      <a-plane class="card-p2" material="transparent: true; opacity: 0" position="-7.8 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
-      <a-plane class="card-place-p2" material="transparent: true; color: green; opacity: 0" position="-7.8 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p2" material="transparent: true" position="-2.2 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p2" material="transparent: true; color: green" position="-2.2 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p2" material="transparent: true" position="-3.6 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p2" material="transparent: true; color: green" position="-3.6 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p2" material="transparent: true" position="-5 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p2" material="transparent: true; color: green" position="-5 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p2" material="transparent: true" position="-6.4 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p2" material="transparent: true; color: green" position="-6.4 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
+      <a-plane class="card-p2" material="transparent: true" position="-7.8 0.1 5.8" rotation="270 0" scale="1.4 1.8 1.8"></a-plane>
+      <a-plane class="card-place-p2" material="transparent: true; color: green" position="-7.8 0.1 3.8" rotation="270 0" scale="1.1 1.6 1.6"></a-plane>
       <!-- P1 MANA -->
-      <a-entity class="mana-p1" material="opacity: 0" n-text="text: Current Mana:" scale="0.2 0.2 0.2" position="-0.8 0.1 -0.5" rotation="270 180"></a-entity>
-      <a-plane class="mana-p1" material="transparent: true; src: #mana; opacity: 0" position="-0.8 0.1 -1.1" rotation="270 180" scale="1 1 1"></a-plane>
-      <a-entity class="mana-p1" material="opacity: 0" n-text="text: 0 / 10" scale="0.1 0.1 0.1" position="-0.85 0.2 -1.3" rotation="270 180"></a-entity>
+      <a-entity class="mana-p1" n-text="text: Current Mana:" scale="0.2 0.2 0.2" position="-0.8 0.1 -0.5" rotation="270 180"></a-entity>
+      <a-plane class="mana-p1" material="transparent: true; src: #mana" position="-0.8 0.1 -1.1" rotation="270 180" scale="1 1 1"></a-plane>
+      <a-entity class="mana-p1" n-text="text: 0 / 10" scale="0.1 0.1 0.1" position="-0.85 0.2 -1.3" rotation="270 180"></a-entity>
       <!-- P2 MANA -->
-      <a-entity class="mana-p2" material="opacity: 0" n-text="text: Current Mana:" scale="0.2 0.2 0.2" position="-0.8 0.1 5.5" rotation="270 0"></a-entity>
-      <a-plane class="mana-p2" material="transparent: true; src: #mana; opacity: 0" position="-0.8 0.1 6.2" rotation="270 0" scale="1 1 1"></a-plane>
-      <a-entity class="mana-p2" material="opacity: 0" n-text="text: 0 / 10" scale="0.1 0.1 0.1" position="-0.8 0.2 6.4" rotation="270 0"></a-entity>
+      <a-entity class="mana-p2" n-text="text: Current Mana:" scale="0.2 0.2 0.2" position="-0.8 0.1 5.5" rotation="270 0"></a-entity>
+      <a-plane class="mana-p2" material="transparent: true; src: #mana" position="-0.8 0.1 6.2" rotation="270 0" scale="1 1 1"></a-plane>
+      <a-entity class="mana-p2" n-text="text: 0 / 10" scale="0.1 0.1 0.1" position="-0.8 0.2 6.4" rotation="270 0"></a-entity>
+      <!-- P1 END TURN -->
+      <a-plane class="end-turn-p1" material="transparent: true; src: #end-turn" position="-9.1 0.1 -0.5" rotation="270 0" scale="1 1 1"></a-plane>
+      <a-entity class="end-turn-p1" n-text="text: End Turn" scale="0.2 0.2 0.2" position="-9.1 0.2 -0.6" rotation="270 180"></a-entity>
+      <!-- P2 END TURN -->
+      <a-plane class="end-turn-p2" material="transparent: true; src: #end-turn" position="-9.1 0.1 5.5" rotation="270 0" scale="1 1 1"></a-plane>
+      <a-entity class="end-turn-p2" n-text="text: End Turn" scale="0.2 0.2 0.2" position="-9.1 0.2 5.5" rotation="270 0"></a-entity>
       <!-- STUFF -->
       <a-box id="p1-join-box" join-game-p1 n-box-collider="isTrigger: true; type: object; size: 1 100 1" material="src: #player-area" position="-5 0.1 -2.8" scale="10 0.1 2.2"></a-box>
       <a-box id="p2-join-box" join-game-p2 n-box-collider="isTrigger: true; type: object; size: 1 100 1" material="src: #player-area"  position="-5 0.1 8" scale="10 0.1 2.2"></a-box>
@@ -65,6 +73,7 @@
       <a-entity id="join-game-p2-text" n-text="text: Step on here to join game! :)" position="-5 1.9 8.4" scale="0.4 0.4 0.4" rotation="0 180 0" n-billboard></a-entity>
       <a-entity id="game-manager" start-game></a-entity>
 		</a-scene>
+ <script type="text/javascript" src="game-start.js"></script>
 	</body>
 </html>
 
