--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <script type="text/javascript" src="join-game-button.js"></script>
 	</head>
 	<body>
-		<a-scene sync-system="app: AltStone; author: Winrar" altspace="fullspace: true">
+		<a-scene altspace="fullspace: true">
       <a-assets>
         <img id="player-area" src="playerarea.jpg">
         <img id="board" src="wood-board.jpg">
