--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
       <a-entity id="join-game-p1-text" n-text="text: Step on here to join game! :)" position="-5 1.9 -3" scale="0.4 0.4 0.4" n-billboard></a-entity>
       <a-entity id="join-game-p2-text" n-text="text: Step on here to join game! :)" position="-5 1.9 8.4" scale="0.4 0.4 0.4" rotation="0 180 0" n-billboard></a-entity>
       <a-entity id="game-manager" start-game></a-entity>
+      <a-entity id="choose-cards-p1-text" n-text="text: Choose the cards you want to replace." position="-5 0.2 4.2" scale="0.2 0.2 0.2" rotation="270 0 0"></a-entity>
+      <a-entity id="choose-ins-p1-text" n-text="text: Press the red 'End Turn' button to proceed."" position="-5 0.2 4.8" scale="0.1 0.1 0.1" rotation="270 0 0"></a-entity>
+      <a-entity id="choose-cards-p2-text" n-text="text: Choose the cards you want to replace." position="-5 0.2 1.2" scale="0.2 0.2 0.2" rotation="270 0 180"></a-entity>
+      <a-entity id="choose-ins-p2-text" n-text="text: Press the red 'End Turn' button to proceed."" position="-5 0.2 0.6" scale="0.1 0.1 0.1" rotation="270 0 180"></a-entity>
 		</a-scene>
 	</body>
 <script type="text/javascript" src="game-start.js"></script>
