--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 	<head>
   <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
   <script src="https://sdk.altvr.com/libs/altspace.js/2.9.0/altspace.min.js"></script>
+  <script src="https://unpkg.com/aframe-animation-component@^4.1.2/dist/aframe-animation-component.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
   <script type="text/javascript" src="card.js"></script>
-  <script type="text/javascript" src="setup.js"></script>
   <script type="text/javascript" src="cardlist.js"></script>
+  <script type="text/javascript" src="game.js"></script>
   <script type="text/javascript" src="deck.js"></script>
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyCADiruFMZZvfta4OH6XXdV6QFjq7s2dyg",
-    authDomain: "altstone2-9b9c7.firebaseapp.com",
-    databaseURL: "https://altstone2-9b9c7.firebaseio.com",
-    projectId: "altstone2-9b9c7",
-    storageBucket: "altstone2-9b9c7.appspot.com",
-    messagingSenderId: "74033689068"
+    apiKey: "AIzaSyBwNbvo59xGQwlKzVV7xwjfKefmwtWoouw",
+    authDomain: "altstone-22863.firebaseapp.com",
+    databaseURL: "https://altstone-22863.firebaseio.com",
+    projectId: "altstone-22863",
+    storageBucket: "altstone-22863.appspot.com",
+    messagingSenderId: "2031237647"
   };
   firebase.initializeApp(config);
-  // Initialize Cloud Firestore through Firebase
-  var db = firebase.firestore();
-  var fbRef = db.collection("AltStone");
+  var database = firebase.database();
  </script>
- <script type="text/javascript" src="game.js"></script>
  <script type="text/javascript" src="join-game-button.js"></script>
 	</head>
 	<body>
@@ -35,16 +33,35 @@
         <img id="card-back" src="card-back.png">
       </a-assets>
       <!-- P1 CARDS -->
-      <a-plane class="card-p1" material="transparent: true" position="-0.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-1.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-2.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-3.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-4.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-5.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-6.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-7.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-8.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p1" material="transparent: true" position="-9.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-0.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-0-p1; easing: easeOutQuad"></a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-1.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-1-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-2.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-2-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-3.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-3-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-4.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-4-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-5.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-5-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-6.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-6-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-7.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-7-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-8.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-8-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p1" material="transparent: true" position="-9.2 0.1 -0.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-9-p1; easing: easeOutQuad"></a-entity>
+      </a-entity>
       <!-- P1 CARD PLACEMENTS -->
       <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0.6" position="-1.8 0.1 1.5" rotation="270 180" scale="0.9 1.3 1.3" ></a-plane>
       <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0.6" position="-2.9 0.1 1.5" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
@@ -54,16 +71,35 @@
       <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0.6" position="-7.3 0.1 1.5" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
       <a-plane class="card-place-p1" material="transparent: true; color: green; opacity: 0.6" position="-8.4 0.1 1.5" rotation="270 180" scale="0.9 1.3 1.3"></a-plane>
       <!-- P2 CARDS -->
-      <a-plane class="card-p2" material="transparent: true" position="-0.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-1.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-2.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-3.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-4.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-5.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-6.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-7.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-8.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
-      <a-plane class="card-p2" material="transparent: true" position="-9.2 0.1 5.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-0.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-0-p2; easing: easeOutQuad"></a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-1.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-1-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-2.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-2-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-3.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-3-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-4.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-4-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-5.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-5-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-6.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-6-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-7.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-7-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-8.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-8-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
+      <a-entity geometry="primitive: plane" class="card-p2" material="transparent: true" position="-9.2 0.1 5.8" rotation="270 180" scale="0.9 1.3 1.3"
+      animation="property: position; startEvents: move-card-9-p2; easing: easeOutQuad"></a-entity>
+      </a-entity>
       <!-- P2 CARD PLACEMENTS -->
       <a-plane class="card-place-p2" material="transparent: true; color: green; opacity: 0.6" position="-1.8 0.1 3.8" rotation="270 0" scale="0.9 1.3 1.3" ></a-plane>
       <a-plane class="card-place-p2" material="transparent: true; color: green; opacity: 0.6" position="-2.9 0.1 3.8" rotation="270 0" scale="0.9 1.3 1.3"></a-plane>
@@ -86,6 +122,8 @@
       <!-- P2 END TURN -->
       <a-plane class="end-turn-p2" material="transparent: true; src: #end-turn" position="-10.2 0.1 5.5" rotation="270 0" scale="1 1 1"></a-plane>
       <a-entity class="end-turn-p2" n-text="text: End Turn" scale="0.2 0.2 0.2" position="-10.2 0.2 5.5" rotation="270 0"></a-entity>
+      <!-- P1 DECK -->
+      <a-box id="p1-deck-box" scale="0.5 0.5 0.5" position="-12 0.1 0.1"></a-box>
       <!-- STUFF -->
       <a-box id="p1-join-box" join-game-p1 n-box-collider="isTrigger: true; type: object; size: 1 100 1" material="src: #player-area" position="-5 0.1 -2.8" scale="10 0.1 2.2"></a-box>
       <a-box id="p2-join-box" join-game-p2 n-box-collider="isTrigger: true; type: object; size: 1 100 1" material="src: #player-area"  position="-5 0.1 8" scale="10 0.1 2.2"></a-box>
