--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
       <a-entity class="end-turn-p2" n-text="text: End Turn" scale="0.2 0.2 0.2" position="-10.2 0.2 5.5" rotation="270 0"></a-entity>
       <!-- P1 DECK -->
       <a-box id="p1-deck-box" scale="0.5 0.5 0.5" position="-12 0.1 0.1"></a-box>
+      <!-- P2 DECK -->
+      <a-box id="p2-deck-box" scale="0.5 0.5 0.5" position="-12 0.1 5.9"></a-box>
       <!-- STUFF -->
       <a-box id="p1-join-box" join-game-p1 n-box-collider="isTrigger: true; type: object; size: 1 100 1" material="src: #player-area" position="-5 0.1 -2.8" scale="10 0.1 2.2"></a-box>
       <a-box id="p2-join-box" join-game-p2 n-box-collider="isTrigger: true; type: object; size: 1 100 1" material="src: #player-area"  position="-5 0.1 8" scale="10 0.1 2.2"></a-box>
